--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,164 @@
+:root {
+    /* Variables de color  */
+    --color-primario: #F3F5FC;
+    --color-secundario: #0a3871;
+    --color-terciario: #ffffff;
+
+    /* Variables de fuentes tipograficas */
+    --fuente-principal: 'Inter', sans-serif;
+}
+
 * {
-    background: #f3f5fc;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    background-color: var(--color-primario);
+    min-width: ;
+}
+
+header{
+    position: relative;
+}
+
+.logo{
+    margin: 2.5rem 0 0 2.5rem;
+    position: absolute;
+}
+
+main{
+    display: flex;
+    justify-content: flex-end;
+    gap: 5rem;
+    padding: 2.5rem;
+}
+
+.rectangulo{
+    width: 50%;
+}
+
+.text-area{
+    background-color: var(--color-primario);
+    margin-top: 7%;
+    width: 100%;
+    border: none;    
     font-family: Inter;
-    font-size: 32px;
+    font-size: 2rem;
     font-weight: 400;
-    line-height: 48px;
+    line-height: 3rem;
+    text-align: left;
+    color: #0A3871;
+    outline: none;
+}
+
+.text-area :focus{
+    outline: none;
+}
+
+::placeholder{
+    color: #0A3871;
+    font-family: Inter;
+    font-size: 2rem;
+    font-weight: 400;
+    line-height: 3rem;
     text-align: left;
 }
 
-.logo {
-    padding-top: 10px;
-    margin-left: 10px;
-    width: 10%;
-}
-
-main {
+.informacion{
     display: flex;
-    margin-bottom: 50px;
-    margin-left:  80px;
+    align-items: center;
+    font-family: Inter;
+    font-size: .75rem;
+    font-weight: 400;
+    /* line-height: 3rem; */
+    text-align: left;
+    gap: .5rem;
 }
 
+.informacion img{
+    width: 1rem;
+    height: 1rem;
+}
+
+.botones{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 2rem;
+    margin-top: 1rem;
+    width: 100%;
+}
+
+.btn-encriptar, .btn-desencriptar, .btn-copiar{
+    flex: 1;
+    height: 4rem;
+    padding: 1.5rem;
+    border-radius: 1.5rem;
+    font-family: 'Inter', sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    text-align: center;
+    margin: 0;
+    cursor: pointer;
+}
+
+.btn-encriptar{
+    background-color: #0A3871;
+    color: #ffffff;
+    border: none;
+}
+
+.btn-desencriptar{
+    color: #0A3871;
+    background-color: #D8DFE8;
+    border: #0A3871 solid 1px;
+}
+
+.mensaje-desencriptado{
+    background-color: #ffffff;
+    border-radius: 2rem;
+    padding: 2rem;
+    width: 25rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.alerta{
+    font-family: Inter;
+    font-size: 1.5rem;
+    font-weight: 700;
+    text-align: center;
+    color: #343A40;
+}
+
+.instrucciones{
+    font-family: Inter;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5rem;
+    text-align: center;
+    color: #343A40;
+}
+
+.btn-copiar{
+    color: #0A3871;
+    background-color: #D8DFE8;
+    border: #0A3871 solid 1px;
+}
+
+.mensaje{
+}
+
+footer {
+    background-color: var(--color-secundario);
+    color: var(--color-terciario);
+    font-family: var(--fuente-principal);
+    padding: 1rem;
+    text-align: center;
+    width: 100%;
+}
