--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,7 @@ main{
     background-color: #ffffff;
     border-radius: 2rem;
     padding: 2rem;
-    width: 25rem;
+    width: 25%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -141,6 +141,7 @@ main{
 
 .muñeco{
     display: block;
+    width: 100%;
 }
 
 .alerta{
@@ -185,12 +186,13 @@ main{
 
 .btn-copiar{
     display: none;
-    height: 7%;
+    max-height: 4rem;
     width: 100%;
     color: #0A3871;
     background-color: #D8DFE8;
     border: #0A3871 solid 1px;
     margin: 2rem;
+    margin-bottom: 4rem;
 }
 
 footer {
@@ -202,4 +204,76 @@ footer {
     width: 100%;
     position: fixed;
     bottom: 0;
+}
+
+@media (max-width: 1250px) {
+
+    .logo{
+        margin-left: 0;
+        margin-top: 4rem;
+    }
+
+    main{
+        gap: 2rem;
+    }
+
+    .contenido {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 100%;
+    }
+
+    .rectangulo{
+        margin-top: 10%;
+        width: 100%;
+    }
+
+    .text-area{
+        
+    }
+
+    .mensaje-desencriptado{
+        justify-content: flex-start;
+        align-content: center;
+        width: 100%;
+        padding: 2rem;
+        gap: 0rem;
+        max-height: 25%;
+        margin-bottom: 0;
+    }
+
+    .muñeco{
+        display: none;
+    }
+
+    .mensaje{
+    }
+
+    .btn-copiar{
+        margin-bottom: 0;
+    }
+}
+
+@media (max-width: 550px){
+
+    .logo{
+        margin: 2rem -1.5rem;
+    }
+
+    .contenido {
+        padding: 1rem;
+    }
+
+    .rectangulo{
+        margin-top: 20%;
+    }
+
+    .botones{
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        width: 100%;
+    }
+
 }
