--- a/styles.css
+++ b/styles.css
@@ -41,12 +41,15 @@ main{
 
 .rectangulo{
     width: 50%;
+    height: ;
+    margin-bottom: 2.5rem;
 }
 
 .text-area{
     background-color: var(--color-primario);
     margin-top: 7%;
     width: 100%;
+    min-height: 100%;
     border: none;    
     font-family: Inter;
     font-size: 2rem;
@@ -92,7 +95,6 @@ main{
     justify-content: space-between;
     align-items: center;
     gap: 1rem;
-    margin-bottom: 2rem;
     margin-top: 1rem;
     width: 100%;
 }
@@ -126,6 +128,7 @@ main{
 }
 
 .mensaje-desencriptado{
+    /* position: relative; */
     display: block;
     background-color: #ffffff;
     border-radius: 2rem;
@@ -134,9 +137,9 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     box-shadow: 0px 24px 32px -8px #00000014;
-    
+    margin-bottom: 2.5rem;
 }
 
 .muñeco{
@@ -177,7 +180,7 @@ main{
     line-height: 2.25rem;
     color: #495057;
     text-align: left;
-    height: 80%;
+    height: 100%;
     width: 100%;
     border: none;
     outline: none;
@@ -192,7 +195,7 @@ main{
     background-color: #D8DFE8;
     border: #0A3871 solid 1px;
     margin: 2rem;
-    margin-bottom: 4rem;
+    margin-bottom: 0;
 }
 
 footer {
@@ -229,10 +232,6 @@ footer {
         width: 100%;
     }
 
-    .text-area{
-        
-    }
-
     .mensaje-desencriptado{
         justify-content: flex-start;
         align-content: center;
@@ -247,15 +246,12 @@ footer {
         display: none;
     }
 
-    .mensaje{
-    }
-
     .btn-copiar{
         margin-bottom: 0;
     }
 }
 
-@media (max-width: 550px){
+@media (max-width: 550px) {
 
     .logo{
         margin: 2rem -1.5rem;
