--- a/styles.css
+++ b/styles.css
@@ -41,15 +41,21 @@ main{
 
 .rectangulo{
     width: 50%;
-    height: ;
     margin-bottom: 2.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    /* width: 50%; */
+    /* margin-bottom: 2.5rem; */
+    padding-bottom: 2rem;
 }
 
 .text-area{
     background-color: var(--color-primario);
     margin-top: 7%;
     width: 100%;
-    min-height: 100%;
+    height: 100%;
     border: none;    
     font-family: Inter;
     font-size: 2rem;
@@ -59,6 +65,7 @@ main{
     color: #0A3871;
     outline: none;
     resize: none;
+    flex-grow: 1;
 }
 
 .text-area :focus{
@@ -83,6 +90,7 @@ main{
     /* line-height: 3rem; */
     text-align: left;
     gap: .5rem;
+    margin-bottom: 1rem;
 }
 
 .informacion img{
@@ -97,6 +105,8 @@ main{
     gap: 1rem;
     margin-top: 1rem;
     width: 100%;
+    margin-bottom: 2rem;
+    /* margin: auto; */
 }
 
 .btn-encriptar, .btn-desencriptar, .btn-copiar{
@@ -137,9 +147,10 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
     box-shadow: 0px 24px 32px -8px #00000014;
     margin-bottom: 2.5rem;
+    
 }
 
 .muñeco{
@@ -230,15 +241,19 @@ footer {
     .rectangulo{
         margin-top: 10%;
         width: 100%;
+        height: 40%;
+        margin-bottom: 0;
+        padding-bottom: 0;
     }
 
     .mensaje-desencriptado{
         justify-content: flex-start;
         align-content: center;
         width: 100%;
-        padding: 2rem;
+        padding: 8rem 2rem;
         gap: 0rem;
         max-height: 25%;
+        margin-top: 4rem;
         margin-bottom: 0;
     }
 
@@ -252,6 +267,11 @@ footer {
 }
 
 @media (max-width: 550px) {
+
+    main{
+        display: flex;
+        justify-content: flex-end;
+    }
 
     .logo{
         margin: 2rem -1.5rem;
@@ -270,6 +290,49 @@ footer {
         flex-direction: column;
         align-items: stretch;
         width: 100%;
+        margin-bottom: 0;
+    }
+
+    .mensaje-desencriptado{
+        margin-top: 4rem;
+        margin-bottom: 0;
     }
 
 }
+
+/* .rectangulo{
+    width: 50%;
+    margin-bottom: 2.5rem;
+}
+.botones{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    margin-top: 1rem;
+    width: 100%;
+}
+.mensaje-desencriptado{
+    display: block;
+    background-color: #ffffff;
+    border-radius: 2rem;
+    padding: 2rem;
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 24px 32px -8px #00000014;
+    margin-bottom: 2.5rem;
+    
+}
+.btn-copiar{
+    display: none;
+    max-height: 4rem;
+    width: 100%;
+    color: #0A3871;
+    background-color: #D8DFE8;
+    border: #0A3871 solid 1px;
+    margin: 2rem;
+    margin-bottom: 0;
+} */
