--- a/styles.css
+++ b/styles.css
@@ -243,17 +243,17 @@ footer {
         width: 100%;
         height: 40%;
         margin-bottom: 0;
-        padding-bottom: 0;
+        padding-bottom: ;
     }
 
     .mensaje-desencriptado{
         justify-content: flex-start;
         align-content: center;
         width: 100%;
-        padding: 8rem 2rem;
+        padding: 2rem;
         gap: 0rem;
         max-height: 25%;
-        margin-top: 4rem;
+        margin-top: 10rem;
         margin-bottom: 0;
     }
 
@@ -294,7 +294,7 @@ footer {
     }
 
     .mensaje-desencriptado{
-        margin-top: 4rem;
+        margin-top: 12rem;
         margin-bottom: 0;
     }
 
