aplicar variables en css

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     --color-primario: #F3F5FC;
     --color-secundario: #0a3871;
     --color-terciario: #ffffff;
+    --color-complementario: #c8d0da;
 
     /* Variables de fuentes tipograficas */
     --fuente-principal: 'Inter', sans-serif;
@@ -15,8 +16,7 @@
 }
 
 body{
-    background-color: #538cd2;
-    /* background-color: var(--color-primario); */
+    background-color: var(--color-primario);
     font-family: var(--fuente-principal);
     display: flex;
     flex-direction: column;
@@ -33,7 +33,7 @@ header{
 }
 
 main{
-    background-color: aqua;
+    background-color: var(--color-primario);
     flex: 1;
     display: flex;
     justify-content: flex-end;
@@ -42,7 +42,7 @@ main{
 }
 
 .rectangulo{
-    background-color: red;
+    background-color: var(--color-primario);
     width: 50%;
     margin-bottom: 2.5rem;
     display: flex;
@@ -52,12 +52,11 @@ main{
 }
 
 .text-area{
-    background-color: yellow;
-    /* background-color: var(--color-primario) */
+    background-color: var(--color-primario)
     margin-top: 7%;
     width: 100%;
     border: none;
-    font-family: Inter;
+    font-family: var(--fuente-principal);
     font-size: 2rem;
     font-weight: 400;
     line-height: 3rem;
@@ -73,8 +72,8 @@ main{
 }
 
 ::placeholder{
-    color: #0A3871;
-    font-family: Inter;
+    color: var(--color-secundario);
+    font-family: var(--fuente-principal);
     font-size: 2rem;
     font-weight: 400;
     line-height: 3rem;
@@ -82,10 +81,9 @@ main{
 }
 
 .informacion{
-    background-color: orange;
     display: flex;
     align-items: center;
-    font-family: Inter;
+    font-family: var(--fuente-principal);
     font-size: .75rem;
     font-weight: 400;
     text-align: left;
@@ -99,14 +97,12 @@ main{
 }
 
 .botones{
-    background-color: green;
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 1rem;
     margin-top: 1rem;
     width: 100%;
-    margin: ;
     margin-bottom: 0;
 }
 
@@ -115,7 +111,7 @@ main{
     height: 4rem;
     padding: 1.5rem;
     border-radius: 1.5rem;
-    font-family: 'Inter', sans-serif;
+    font-family: var(--fuente-principal);
     font-size: 1rem;
     font-weight: 400;
     text-align: center;
@@ -123,21 +119,20 @@ main{
 }
 
 .btn-encriptar{
-    background-color: #0A3871;
-    color: #ffffff;
+    background-color: var(--color-secundario);
+    color: var(--color-terciario);
     border: none;
 }
 
 .btn-desencriptar{
-    color: #0A3871;
-    background-color: #D8DFE8;
-    border: #0A3871 solid 1px;
+    color: var(--color-secundario);
+    background-color: var(--color-complementario);
+    border: var(--color-secundario) solid 1px;
 }
 
 .mensaje-desencriptado{
-    background-color: red;
     display: block;
-    /* background-color: #ffffff; */
+    background-color: var(--color-terciario);
     border-radius: 2rem;
     padding: 2rem;
     width: 25%;
@@ -150,40 +145,36 @@ main{
 }
 
 .muñeco{
-    background-color: yellow;
     display: block;
     width: 100%;
 }
 
 .alerta{
-    background-color: orange;
     display: block;
-    font-family: Inter;
+    font-family: var(--fuente-principal);
     font-size: 1.5rem;
     font-weight: 700;
     text-align: center;
-    color: #343A40;
+    color: var(--color-complementario);
 }
 
 .instrucciones{
-    background-color: orange;
     display: block;
-    font-family: Inter;
+    font-family: var(--fuente-principal);
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5rem;
     text-align: center;
-    color: #343A40;
+    color: var(--color-complementario);
 }
 
 .mensaje{
-    background-color: yellow;
     display: none;
-    font-family: Inter;
+    font-family: var(--fuente-principal);
     font-size: 1.5rem;
     font-weight: 400;
     line-height: 2.25rem;
-    color: #495057;
+    color: var(--color-complementario);
     text-align: left;
     height: 100%;
     width: 100%;
@@ -193,13 +184,12 @@ main{
 }
 
 .btn-copiar{
-    background-color: green;
     display: none;
     max-height: 4rem;
     width: 100%;
-    color: #0A3871;
-    background-color: #D8DFE8;
-    border: #0A3871 solid 1px;
+    color: var(--color-secundario);
+    background-color: var(--color-complementario);
+    border: var(--color-secundario) solid 1px;
     margin: 2rem;
     margin-bottom: 0;
 }
