--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ main{
 }
 
 .text-area{
-    background-color: var(--color-primario)
+    background-color: var(--color-primario);
     margin-top: 7%;
     width: 100%;
     border: none;
@@ -61,7 +61,7 @@ main{
     font-weight: 400;
     line-height: 3rem;
     text-align: left;
-    color: #0A3871;
+    color: var(--color-secundario);
     outline: none;
     resize: none;
     flex-grow: 1;
@@ -106,7 +106,7 @@ main{
     margin-bottom: 0;
 }
 
-.btn-encriptar, .btn-desencriptar, .btn-copiar{
+.btn-encriptar, .btn-desencriptar, .btn-copiar, .btn-limpiar{
     flex: 1;
     height: 4rem;
     padding: 1.5rem;
@@ -128,6 +128,13 @@ main{
     color: var(--color-secundario);
     background-color: var(--color-complementario);
     border: var(--color-secundario) solid 1px;
+}
+
+.btn-limpiar{
+    color: var(--color-secundario);
+    background-color: var(--color-complementario);
+    border: var(--color-secundario) solid 1px;
+    display: none;
 }
 
 .mensaje-desencriptado{
