--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 :root {
     /* Variables de color  */
-    --color-primario: #F3F5FC;
+    --color-primario: #eaefff;
     --color-secundario: #0a3871;
-    --color-terciario: #ffffff;
-    --color-complementario: #c8d0da;
+    --color-terciario: #ffffff15;
+    --color-complementario: #575758;
 
-    /* Variables de fuentes tipograficas */
-    --fuente-principal: 'Inter', sans-serif;
+    /* Variables de fuentes tipográficas */
+    --fuente-principal: 'Outfit', sans-serif;
 }
 
 * {
@@ -84,6 +84,7 @@ main{
     display: flex;
     align-items: center;
     font-family: var(--fuente-principal);
+    color: var(--color-complementario);
     font-size: .75rem;
     font-weight: 400;
     text-align: left;
@@ -119,27 +120,34 @@ main{
 }
 
 .btn-encriptar{
-    background-color: var(--color-secundario);
-    color: var(--color-terciario);
+    background-color: var(--color-primario);
+    color: var(--color-secundario);
     border: none;
+    box-shadow: 28px 24px 50px #00000016,
+    -23px -23px 45px -20px #ffffff;
 }
 
 .btn-desencriptar{
     color: var(--color-secundario);
-    background-color: var(--color-complementario);
-    border: var(--color-secundario) solid 1px;
+    background-color: var(--color-primario);
+    border: none;
+    box-shadow: 28px 24px 50px #00000016,
+    -23px -23px 45px -20px #ffffff;
 }
 
 .btn-limpiar{
     color: var(--color-secundario);
-    background-color: var(--color-complementario);
-    border: var(--color-secundario) solid 1px;
+    background-color: var(--color-primario);
+    border: none;
+    box-shadow: 28px 24px 50px #00000016,
+    -23px -23px 45px -20px #ffffff;
     display: none;
 }
 
 .mensaje-desencriptado{
     display: block;
     background-color: var(--color-terciario);
+    backdrop-filter: blur(5px);
     border-radius: 2rem;
     padding: 2rem;
     width: 25%;
@@ -147,7 +155,8 @@ main{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    box-shadow: 0px 24px 32px -8px #00000014;
+    box-shadow: 28px 24px 50px #00000016,
+    -23px -23px 45px -20px #ffffff;
     margin-bottom: 2.5rem;
 }
 
@@ -176,6 +185,7 @@ main{
 }
 
 .mensaje{
+    background-color: var(--color-terciario);
     display: none;
     font-family: var(--fuente-principal);
     font-size: 1.5rem;
@@ -195,15 +205,17 @@ main{
     max-height: 4rem;
     width: 100%;
     color: var(--color-secundario);
-    background-color: var(--color-complementario);
-    border: var(--color-secundario) solid 1px;
+    /* background-color: var(--color-complementario); */
+    border: none;
     margin: 2rem;
     margin-bottom: 0;
+    box-shadow: 28px 24px 50px #00000016,
+    -23px -23px 45px -20px #ffffff;;
 }
 
 footer {
     background-color: var(--color-secundario);
-    color: var(--color-terciario);
+    color: var(--color-primario);
     font-family: var(--fuente-principal);
     padding: .5rem;
     text-align: center;
@@ -315,3 +327,4 @@ footer {
 .animar {
     animation: resaltarRestricciones 1s ease-in-out; /* Aplica la animación */
 }
+
